# fullstackTodo-app

./: package-lock.json
api/: pyproject.toml  requirements.txt
api/todo/: main.py
app/: action.ts  loading.ts  page.tsx
app/[id]/: page.tsx
app/components/: Inputfield.tsx  Tasklist.tsx
